Fix extending buttons malfunction
If data in the table was too long, the buttons would bug out
Fixed

--- a/src/main/resources/static/styles/cailua.css
+++ b/src/main/resources/static/styles/cailua.css
@@ -274,12 +274,10 @@ a {
         display: none;
         width: 100px;
         height: 20px;
-        padding: 2px 3px;
-
         /* Center vertically the option buttons */
         position: absolute;
         top: 50%;
-        left: 24px;
+        padding: 2px 3px 2px 24px;
         margin-top: -14px;
     }
 
